Properties added to fix security issue.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -20,10 +20,13 @@ spring.servlet.multipart.max-request-size=-1
 logging.file.name=/recap-vol/logs/phase4-scsb-ui/phase4-scsb-ui.log
 
 #adding for monitoring
-management.endpoints.web.exposure.include=*
+#management.endpoints.web.exposure.include=*
 management.endpoint.health.show-details=always
 
 spring.config.import=optional:configserver:
 
 spring.main.allow-circular-references = true
 spring.mvc.pathmatch.matching-strategy=ant_path_matcher
+
+management.endpoints.web.exposure.include=health,info,metrics
+management.endpoints.web.exposure.exclude=env
